[gd_scene load_steps=9 format=3 uid="uid://dwj13vkm4xng2"]

[ext_resource type="Script" path="res://scripts/tree.gd" id="1_7adl1"]
[ext_resource type="Texture2D" uid="uid://cmhvnyjdj0qyq" path="res://icon.svg" id="2_5dxj4"]
[ext_resource type="PackedScene" uid="uid://ba54gdm7llans" path="res://Scenes/wood.tscn" id="2_ol561"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_utnrh"]
size = Vector2(120, 204)

[sub_resource type="Animation" id="Animation_llprb"]
resource_name = "Chop"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.239624, -0.95024, -2.31325]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -29.25), Vector2(-5, -29.25), Vector2(-27, -25), Vector2(-40, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Icon2:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ggybd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -29.25)]
}

[sub_resource type="Animation" id="Animation_h41re"]
resource_name = "Vanishing"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8xcse"]
_data = {
"Chop": SubResource("Animation_llprb"),
"RESET": SubResource("Animation_ggybd"),
"Vanishing": SubResource("Animation_h41re")
}

[node name="Tree" type="Area2D"]
script = ExtResource("1_7adl1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_utnrh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8xcse")
}
autoplay = "RESET"

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, 29.5)
scale = Vector2(0.21875, 0.460938)
texture = ExtResource("2_5dxj4")

[node name="Icon2" type="Sprite2D" parent="."]
position = Vector2(-1, -29.25)
scale = Vector2(0.21875, 0.457031)
texture = ExtResource("2_5dxj4")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="Wood" parent="." instance=ExtResource("2_ol561")]
visible = false
position = Vector2(-1.07584, 60)

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
